--- a/多倍分流.ini
+++ b/多倍分流.ini
@@ -95,24 +95,24 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇭🇰 香港1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇭🇰 香港高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇯🇵 日本低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇯🇵 日本1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇯🇵 日本高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇺🇲 美国低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
-custom_proxy_group=🇺🇲 美国1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
-custom_proxy_group=🇺🇲 美国高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
-custom_proxy_group=🇨🇳 台湾低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇨🇳 台湾1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇨🇳 台湾高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇸🇬 狮城低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇸🇬 狮城1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇸🇬 狮城高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇰🇷 韩国低倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇰🇷 韩国1倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
-custom_proxy_group=🇰🇷 韩国高倍`url-test^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇭🇰 香港高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇯🇵 日本高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
+custom_proxy_group=🇺🇲 美国高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\bhttp://www.gstatic.com/generate_204300,,150`
+custom_proxy_group=🇨🇳 台湾低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇨🇳 台湾高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇸🇬 狮城高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
+custom_proxy_group=🇰🇷 韩国高倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\bhttp://www.gstatic.com/generate_204300,,50`
 
 这些正则表达式将会根据您的要求，将没有明确倍率标识的节点统一分到1倍分组。如果需要进一步修改或添加其他地区的规则，请提供相应的信息，我将为您提供适当的正则表达式。
 
