--- a/分流多倍.ini
+++ b/分流多倍.ini
@@ -95,7 +95,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港1倍`url-test
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\bhttp://www.gstatic.com/generate_204300,,50
 custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
