--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -65,7 +65,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🇭🇰 香港高倍`[]🇨🇳 台湾高倍`[]🇸🇬 狮城高倍`[]🇯🇵 日本高倍`[]🇺🇲 美国高倍`[]🇰🇷 韩国高倍`[]⭐ 特殊低倍
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]⭐ 特殊低倍
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 Google`select[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`
@@ -86,7 +86,7 @@ custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾低倍`[]🇨🇳 台湾
 custom_proxy_group=🎵 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港高倍`[]🇨🇳 台湾高倍`[]🇸🇬 狮城高倍`[]🇯🇵 日本高倍`[]🇺🇲 美国高倍`[]🇰🇷 韩国高倍`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 手动切换
 custom_proxy_group=📽️ 国内媒体`select`[]DIRECT
 custom_proxy_group=📽️ 国外媒体`select`[]🚀 节点选择[]⭐ 特殊低倍
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
@@ -107,12 +107,6 @@ custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b)
 custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`
-custom_proxy_group=🇰🇷 韩国高倍`url-test`((?=.*[1-9]\d*\.?\d*$))(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⭐ 特殊低倍`url-test`(Luxembourg)`http://www.gstatic.com/generate_204`
 
 ;设置分组标志位
