--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -65,7 +65,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]⭐ 特殊低倍
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]⭐ 特殊低倍`
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 Google`select[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`
