--- a/1.ini
+++ b/1.ini
@@ -101,12 +101,13 @@ custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]
 custom_proxy_group=🇨🇳 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[Xx×倍])\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?!.*[Xx×倍])\b(台|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[Xx×倍])\b(日本|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡1倍`url-test`^(?!.*[Xx×倍])\b(新加坡|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国1倍`url-test`^(?!.*[Xx×倍])\b(美国|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*[Xx×倍])\b(韩国|KR|Korea)\b`http://www.gstatic.com/generate_204`300,,50
+
 
 ;设置分组标志位
 
