--- a/1.ini
+++ b/1.ini
@@ -104,8 +104,8 @@ custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]
 custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[X|x|×]).*\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?!.*[X|x|×]).*\b(台|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*\b(日本|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美国|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美国|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*[X|x|×]).*\b(韩国|KR|Korea)\b`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
