--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -82,7 +82,7 @@ custom_proxy_group=📲 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾低
 custom_proxy_group=📲 Whatsapp`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎤 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎵 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
