--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -68,9 +68,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎬 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🏬 Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🏬 Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🖥 Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁︎ onedrive`select`[]DIRECT
 custom_proxy_group=🤖 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
