--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -106,9 +106,9 @@ custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(?:台|新北|彰化|TW|
 custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(?:新加坡|坡|狮城|SG|Singapore)).*(?:IEPL|IPLC|EIP|CN2GIA).*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|な|ら|み|う|い|み|か|あ|め|ゆ|沙|奈))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|な|ら|み|う|い|み|か|あ|め|ゆ|沙|奈)\b)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|な|ら|み|う|い|み|か|あ|め|ゆ|沙|奈))(?=.*(?:IEPL|IPLC|EIP|CN2GIA))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木)\b)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木))(?=.*(?:IEPL|IPLC|EIP|CN2GIA))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(?:美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)).*(?:IEPL|IPLC|EIP|CN2GIA).*`http://www.gstatic.com/generate_204`300,,150
