--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -71,7 +71,7 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 Google`select`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港高级`[]🇹🇼 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
 custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
@@ -106,9 +106,9 @@ custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(?:台|新北|彰化|TW|
 custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(?:新加坡|坡|狮城|SG|Singapore)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)|(みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)|(みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木)\b)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)|(みか|かわ|小島|鷲尾|篠田|沙月|深田|工藤|桃乃木))(?=.*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))(?=.*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(?:美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*`http://www.gstatic.com/generate_204`300,,150
